--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -22,8 +22,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ atrichatterjee7 }}
+          password: ${{ dckr_pat_Enn5zcmqsfpHYlN4eJJrD6aqUKY }}
       -
         name: Build and push
         uses: docker/build-push-action@v4
