--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{secrets.atrichatterjee7}}
-          password: ${{secrets.20%of100=20}}
+          password: ${{secrets.dckr_pat_Q4TFcMTNToeGE3gd99S5eTN-caI}}
       -
         name: Build and push
         uses: docker/build-push-action@v4
