--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -3,31 +3,29 @@ name: ci
 on:
   push:
     branches:
-      - 'main'
+      - "main"
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout
         uses: actions/checkout@v3
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.atrichatterjee7}}
-          password: ${{secrets.dckr_pat_Q4TFcMTNToeGE3gd99S5eTN-caI}}
+          username: ${{ secrets.atrichatterjee7 }}
+          password: ${{ secrets.dckr_pat_Q4TFcMTNToeGE3gd99S5eTN-caI }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       -
         name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          tags: user/app:latest
+          tags: ${{ secrets.atrichatterjee7 }}/clockbox:latest
