--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.TOKEN }}
-        issue-message: "Hi! Thanks for submitting your first Issue"
-        pr-message: "Hi! Thanks for submitting your first PR, Kindly Check the Contributor's guide for new users"
+        issue-message: "Hi @${{ github.actor }}! Thanks for submitting your first Issue"
+        pr-message: "Hi @${{ github.actor }} ! Thanks for submitting your first PR, Kindly Check the Contributor's guide for new users"
